Version upgrade to 3.5.0 Small fixed/updates